<resources>
    <string name="app_name">NeWork</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="button_testing">Test of smth</string>

    <string name="button_log_on">Log On!</string>
    <string name="button_log_off">Log Off!</string>


    <!-- Login, Registration -->
    <string name="prompt_server">Server</string>
    <string name="prompt_port">Port</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_clear">Clear</string>
    <string name="button_register">Register!</string>


    <!-- Menus -->
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="authorize">Log in</string>
    <string name="register">Register</string>
    <string name="logout">Log out</string>
    <string name="logout_user">Log out %1$s</string>


    <!-- Labels -->
    <string name="label_posts">Posts</string>
    <string name="label_events">Events</string>
    <string name="label_users">Users</string>


    <!-- Displayed alerts -->
    <string name="alert_string_resource_not_found">Error description not found</string>
    <string name="alert_unknown_error">Unknown error</string>
    <!-- server -->
    <string name="alert_wrong_server_response">Wrong server response %1$d %2$s</string>
    <string name="alert_server_accessing_error">Server accessing error</string>
    <string name="alert_server_unavailable">Server is not available</string>
    <!-- user -->
    <string name="alert_user_already_registered">User already registered %1$s</string>
    <string name="alert_incorrect_username">Incorrect username %1$s</string>
    <string name="alert_incorrect_password">Incorrect password</string>
    <string name="alert_user_not_found">User %1$d not found</string>
    <!-- media -->
    <string name="alert_incorrect_photo_format">Incorrect format of photo</string>
    <string name="alert_authorization_required">Authorization required</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_user_jobs">Jobs</string>
    <string name="label_user_wall">Wall</string>

    <!-- From Figma -->

    <!--    <string name="header">
                                \u00d0\u0093\u00d0\u009a \u00d0\u00a6\u00d0\u00b5\u00d0\u00bd\u00d1\u0082\u00d1\u0080 \u00d0\u00a4\u00d0\u00b8\u00d0\u00bd\u00d0\u00b0\u00d0\u00bd\u00d1\u0081\u00d0\u00be\u00d0\u00b2\u00d1\u008b\u00d1\u0085 \u00d0\u00a2\u00d0\u00b5\u00d1\u0085\u00d0\u00bd\u00d0\u00be\u00d0\u00bb\u00d0\u00be\u00d0\u00b3\u00d0\u00b8\u00d0\u00b9
    </string>-->
    <!--    <string name="subhead">
                                1 \u00d0\u00bc\u00d0\u00b0\u00d1\u0080\u00d1\u0082\u00d0\u00b0 2019 \u00e2\u0080\u0093 1 \u00d0\u00b0\u00d0\u00b2\u00d0\u00b3\u00d1\u0083\u00d1\u0081\u00d1\u0082\u00d0\u00b0 2020
    </string>-->
    <!--    <string name="title">
                            \u00d0\u0098\u00d0\u00bd\u00d0\u00b6\u00d0\u00b5\u00d0\u00bd\u00d0\u00b5\u00d1\u0080-\u00d0\u00bf\u00d1\u0080\u00d0\u00be\u00d0\u00b3\u00d1\u0080\u00d0\u00b0\u00d0\u00bc\u00d0\u00bc\u00d0\u00b8\u00d1\u0081\u00d1\u0082
    </string>-->

    <string name="select_date">Select date</string>
    <string name="enter_period_caption">Enter dates</string>
    <string name="date_format">mm/dd/yyyy</string>
    <string name="end_label_text">End date</string>
    <string name="present">Present</string>

    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>
    <string name="label_clear">Clear</string>
    <string name="label_exit">Exit</string>

    <string name="add">Add</string>

    <string name="job_company_name">Name</string>
    <string name="job_position">Position</string>
    <string name="job_link">Link</string>
    <string name="label_link">LINK to go</string>
    <string name="label_online">Online</string>
    <string name="label_datetime_format">DD.MM.YY hh:mm</string>


</resources>
