<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/authorized">

        <!--TODO Выяснить, какой файл надо править,
        чтобы была картинка вместе с текстом
        https://java-online.ru/android-menu.xhtml -->

        <item
            android:id="@+id/logout"
            android:icon="@drawable/icset_logout_24"
            android:title="@string/logout"
            app:showAsAction="ifRoom" />
    </group>

    <group android:id="@+id/unauthorized">
        <item
            android:id="@+id/auth"
            android:title="@string/authorize" />
        <item
            android:id="@+id/register"
            android:title="@string/register" />
    </group>

</menu>
