<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center_horizontal"
    android:layout_marginTop="@dimen/icon_size_double"
    android:background="@drawable/rounded_date_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/select_date"
        android:layout_width="@dimen/dialog_element_width"
        android:layout_height="@dimen/label_height_20"
        android:layout_margin="@dimen/text_margin"
        android:lineSpacingExtra="@dimen/text_spacing_4"
        android:text="@string/select_date"
        android:textAppearance="@style/select_date" />

    <LinearLayout
        android:id="@+id/date"
        android:layout_width="@dimen/dialog_element_width"
        android:layout_height="@dimen/icon_size_double"
        android:layout_margin="@dimen/text_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/enter_period_caption"
            android:layout_width="@dimen/dialog_caption"
            android:layout_height="@dimen/icon_size_double"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/text_spacing_2"
            android:text="@string/enter_period_caption"
            android:textAppearance="@style/enter_period_caption" />

        <ImageView
            android:id="@+id/icon_button"
            android:layout_width="@dimen/icon_size_double"
            android:layout_height="@dimen/icon_size_double"
            android:src="@drawable/icset_event_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_return"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="@dimen/dialog_element_height"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/area_date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rounded_text_field" />

            <TextView
                android:id="@+id/input_date_start"
                android:layout_width="@dimen/text_edit_height"
                android:layout_height="@dimen/icon_size_min"
                android:layout_gravity="center"
                android:hint="@string/date_format"
                android:lineSpacingExtra="@dimen/text_spacing_5"
                android:textAppearance="@style/input_text" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/area_date_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rounded_text_field" />

            <TextView
                android:id="@+id/input_date_finish"
                android:layout_width="@dimen/text_edit_height"
                android:layout_height="@dimen/icon_size_min"
                android:layout_gravity="center"
                android:hint="@string/date_format"
                android:lineSpacingExtra="@dimen/text_spacing_5"
                android:textAppearance="@style/input_text" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_cancel" />

            <Button
                android:id="@+id/button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_ok" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/date_picker_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_margin="@dimen/text_margin">

                <ImageButton
                    android:id="@+id/escape_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_ios_new_24"
                    android:text="@string/label_exit" />

                <ImageButton
                    android:id="@+id/clear_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icset_clear_24"
                    android:text="@string/label_clear" />

            </LinearLayout>

        </FrameLayout>
    </FrameLayout>

</LinearLayout>
